// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryTypeIcon component rendering it should get rendered correctly 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="type-tooltip-123"
      placement="right"
    >
      unknown-type
    </Tooltip>
  }
  placement="bottom"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <ListViewIcon
    name="fa-2x fa fa-question"
  />
</OverlayTrigger>
`;

exports[`RepositoryTypeIcon component rendering it should get rendered correctly when type is provided 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="type-tooltip-123"
      placement="right"
    >
      yum
    </Tooltip>
  }
  placement="bottom"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <ListViewIcon
    name="fa-2x pficon-bundle"
  />
</OverlayTrigger>
`;
